# plasma-desktop

./: README.md
kcms/: CMakeLists.txt
kcms/mouse/backends/kwin_wl/: kwin_wl_backend.cpp
kcms/pointer/: CMakeLists.txt  pointer.cpp  pointer.desktop  pointer.h  pointermodel.cpp  pointermodel.h
kcms/pointer/package/: metadata.desktop
kcms/pointer/package/contents/ui/: JrDialog.qml  JrHandDialog.qml  main.qml
kcms/trackpad/: CMakeLists.txt  trackpad.cpp  trackpad.desktop  trackpad.h  trackpadmodel.cpp  trackpadmodel.h
kcms/trackpad/package/: metadata.desktop
kcms/trackpad/package/contents/ui/: main.qml
